--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.1",
+    "lottie-react-native": "^6.7.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0"
