--- a/website/package.json
+++ b/website/package.json
@@ -10,6 +10,7 @@
     "exif-js": "^2.3.0",
     "firebase": "^10.8.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
